src/css/base/_layout.sass
html
  box-sizing: border-box
  font-family: sans-serif
  height: 100%

*,
*::after,
*::before
  box-sizing: inherit

body
  &.loadeing
    background-color: $main-color

.page
  display: flex
  flex-direction: column
  height: 100%
  min-width: 320px
  overflow-wrap: break-word

  &__content
    flex: 1 0 auto

  &__section
    overflow: hidden
    padding-top: calc(5vw + 30px)
    padding-bottom: calc(5vw + 30px)
    position: relative

    @media(min-width: 1500px)
      padding-top: 100px
      padding-bottom: 100px

    &--dark
      background-color: $main-color
      color: #fff

    &--back
      background-image: url('../images/backgrounds/back.jpg')
      background-position: 50% 50%
      background-repeat: no-repeat
      background-size: cover
      background-color: $main-color
      color: #fff

  &__footer
    flex-shrink: 0

.container
  margin-left: auto
  margin-right: auto
  max-width: 1300px
  padding-left: 15px
  padding-right: 15px

  @media(min-width: 768px)
    padding-left: 30px
    padding-right: 30px

.animate-scroll
  @media(min-width: 1200px)
    opacity: 0
    transition: opacity 0.5s, transform 0.5s
    transform: translateY(-20px)

  &.visible
    @media(min-width: 1200px)
      opacity: 1
      transform: translateY(0)

